@@ -289,7 +289,7 @@ b.future, b.standout, a.standout {
 #menulist dt {
   display: block;
   float: left;
-  width: 85px;
+  width: 93px;
   font-style: italic;
 }
 #menulist dd {
